--- a/vlm/requirements.txt
+++ b/vlm/requirements.txt
@@ -9,6 +9,9 @@ torch>=1.7.0,!=1.12.0
 torchvision>=0.8.1,!=0.13.0
 tqdm>=4.41.0
 protobuf<4.21.3
-transformers==4.37.0
+transformers==4.40.2
 accelerate
 uvicorn[standard]
+
+Pillow==9.1.0
+requests
